Fix spacing

--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ ul {
   background-color: #fff;
   box-shadow: 0.3em 0.3em 0.5em #8e8c8c;
   border-radius: 1em;
-  margin: 1em;
+  margin: 1em 2em;
 }
 .pink {
   color: #ec09ae;
@@ -57,8 +57,11 @@ h1 {
 main {
   display: flex;
 }
-.col-8 {
-  width: 80%;
+.col-7 {
+  width: 70%;
+}
+.col-3 {
+  width: 30%;
 }
 h3 {
   color: #4e4e4e;
@@ -69,7 +72,6 @@ h3 {
 .col-3 > div {
   padding: 1em;
 }
-
 .name {
   font-weight: bold;
   color: #ec09ae;
@@ -77,4 +79,12 @@ h3 {
 .design span {
   font-weight: bold;
   color: #4e4e4e;
+}
+
+/* RIGHT COLUMN */
+.col-7 p {
+  padding-bottom: 1em;
+}
+.col-7 .container {
+  padding: 1em 1em 0;
 }
